--- a/dev/mongo-db.yaml
+++ b/dev/mongo-db.yaml
@@ -2,6 +2,9 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: mongodb
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
+
 spec:
   destination:
     name: ''
