--- a/apps/mongo-db.yaml
+++ b/apps/mongo-db.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   destination:
     name: ''
-    namespace: mongo-db
+    namespace: default
     server: 'https://kubernetes.default.svc'
   source:
     path: ''
